Use selected controls in ssp; UI improvements; simpler app version reference
**Model changes**

* Add controls.Element.select_controls_oscal_ctl_ids property
  to generate list of selected controls oscal_ctl_ids. Enable
  list of selected controls in SSP.

**UI changes**

* Simplify references to compliance app version;
  display compliance app version number from 'version' key
* Simplify display of title of project in UI
* Display additional information about the compliance app in
  the project settings modal
* Stop showing project page's grid of options once number
  of projects exceeds 4

**Compliance app changes**

* Improve data extraction in project page and store so only use
  the 'version' key to get version information.

--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -89,12 +89,14 @@ div.subtitle {
           {{project.title}}
           {% block title_suffix_text %}
           {% endblock %}
-          <br><small>Project ID: {{project.id}} &nbsp;|&nbsp; Portfolio: <a href="{{project.portfolio.get_absolute_url}}" style="color: inherit;">{{project.portfolio.title}}</a></small>
         </h1>
 
         {% if title != project.root_task.module.spec.title %}
-        <div class="subtitle">
-          {{project.root_task.module.spec.title}}
+        <div class="">
+        <br>
+          {{project.root_task.module.spec.title}} (ver {{project.root_task.module.spec.version}}) -
+          {{project.root_task.module.app.catalog_metadata.description.short|safe|truncatewords_html:18}}
+
         </div>
         {% endif %}
         {% endif %}
