Closes #951. Closes #953. Assign non-admin project perms on system, root_element
When a new project is created by a non-admin, correctly assign the
permissions to the system and root_element to the user who started the project.

When a non-admin user invites a non-admin user to a join a project,
correctly assign edit perms to system and root_element.

Update documentation logging for new logged actions related to the above.

Fix mislabeled JSON response preventing full remove deleted statement
from editor.

--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -442,7 +442,7 @@ Remove contextbar from top of page
           if (result) {
               // Delete statement object in database if it exists
               if ($( '#'+smt_panel_num+' input[name=producer_element_id]' ).val().length > 0) {
-                console.log("deleting db object")
+                // console.log("deleting db object")
                 // serialize data from the identified statement form
                 var data = $( '#'+smt_panel_num ).serialize()
                 // send data via ajax to delete object
