Fix error assigning edit perms to system.root_element
Fix missing path reference to root_element. Failed to
include project.system.

--- a/templates/base.html
+++ b/templates/base.html
@@ -132,7 +132,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-success btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
+            <button id="invite_submit_btn" type="button" class="btn btn-success btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
           </div>
         </div>
       </div>
